Correción de rutas

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 				<div class="logo"><a href="/">Escribanía Otorongulus</a></div>
 			<div id="navItemContainer" class="items">
 				<ul id="items">
-					<li><a href="/nosotros.html">Nosotros</a></li>
-					<li><a href="/servicios.html">Servicios</a></li>
-					<li><a href="/contacto.html">Contacto</a></li>
+					<li><a href="./nosotros.html">Nosotros</a></li>
+					<li><a href="./servicios.html">Servicios</a></li>
+					<li><a href="./contacto.html">Contacto</a></li>
 				</ul>
 				<div id="sandwitch" class="sandwitch"><i style="font-size:24px" class="fa">&#xf0c9;</i></div>
 			</div>
@@ -60,7 +60,7 @@
 		<p>Dolor mollitia doloribus nisi quam voluptate sit? Harum tempora quidem possimus odio temporibus asperiores
 			iste officia. Ipsum eos quos repellat numquam id Nostrum praesentium ab placeat voluptate quasi magnam
 			Voluptatibus?</p>
-		<a class="boton-main" href="/nosotros.html">Saber más</a>
+		<a class="boton-main" href="./nosotros.html">Saber más</a>
 
 		</div>
 	
@@ -72,21 +72,21 @@
 		<div class="servicios-container">
 			<h2>Servicios</h2>
 			<div class="grid-servicios">
-				<a href="/servicios.html#sociedades"><i class="fa-solid fa-user-group"></i> Sociedades Comerciales</a>
-				<a href="/servicios.html#poderes"><i class="fa-solid fa-image-portrait"></i> Poderes</a>
-				<a href="/servicios.html#compraventas"><i class="fa-solid fa-house"></i> Compraventas</a>
-				<a href="/servicios.html#certificaciones"><i class="fa-solid fa-feather"></i> Certificaciones de Firmas
+				<a href="./servicios.html#sociedades"><i class="fa-solid fa-user-group"></i> Sociedades Comerciales</a>
+				<a href="./servicios.html#poderes"><i class="fa-solid fa-image-portrait"></i> Poderes</a>
+				<a href="./servicios.html#compraventas"><i class="fa-solid fa-house"></i> Compraventas</a>
+				<a href="./servicios.html#certificaciones"><i class="fa-solid fa-feather"></i> Certificaciones de Firmas
 				</a>
-				<a href="/servicios.html#autenticaciones"><i class="fa-solid fa-clipboard-check"></i>
+				<a href="./servicios.html#autenticaciones"><i class="fa-solid fa-clipboard-check"></i>
 					Autenticaciones</a>
-				<a href="/servicios.html#actas"><i class="fa-solid fa-scroll"></i> Actas</a>
-				<a href="/servicios.html#autorizaciones-viaje"><i class="fa-solid fa-plane"></i> Autorizaciones de
+				<a href="./servicios.html#actas"><i class="fa-solid fa-scroll"></i> Actas</a>
+				<a href="./servicios.html#autorizaciones-viaje"><i class="fa-solid fa-plane"></i> Autorizaciones de
 					Viaje</a>
-				<a href="/servicios.html#autorizaciones-manejo"><i class="fa-solid fa-car-side"></i> Autorizaciones de
+				<a href="./servicios.html#autorizaciones-manejo"><i class="fa-solid fa-car-side"></i> Autorizaciones de
 					Manejo</a>
 
 			</div>
-			<a class="boton" href="/servicios.html">Más información</a>
+			<a class="boton" href="./servicios.html">Más información</a>
 		</div>
 	</section>
 	<footer>
@@ -107,7 +107,7 @@
 		</div>
 		Escribanía Otorongulus - 2022
 	</footer>
-	<script src="scripts/navbar.js"></script>
+	<script src="./scripts/navbar.js"></script>
 </body>
 
 </html>
