--- a/nosotros.html
+++ b/nosotros.html
@@ -27,9 +27,9 @@
 				<div class="logo"><a href="/">Escribanía Otorongulus</a></div>
 			<div id="navItemContainer" class="items">
 				<ul id="items">
-					<li><a href="/nosotros.html">Nosotros</a></li>
-					<li><a href="/servicios.html">Servicios</a></li>
-					<li><a href="/contacto.html">Contacto</a></li>
+					<li><a href="./nosotros.html">Nosotros</a></li>
+					<li><a href="./servicios.html">Servicios</a></li>
+					<li><a href="./contacto.html">Contacto</a></li>
 				</ul>
 				<div id="sandwitch" class="sandwitch"><i style="font-size:24px" class="fa">&#xf0c9;</i></div>
 			</div>
@@ -64,7 +64,7 @@
 					exercitationem assumenda? Nulla illo aspernatur magnam. <b>Si confías en nosotros y te interesa
 						saber más acerca de los trabajos que realizamos, te recomendamos visitar nuestra sección de
 						servicios.</b> </p>
-				<a class="bordered-button" href="/servicios.html">Saber más de nuestos servicios</a>
+				<a class="bordered-button" href="./servicios.html">Saber más de nuestos servicios</a>
 			</div>
 
 		</main>
