Link del logo corregido

--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
 
 		<nav>	
 			<div class="container-nav">
-				<div class="logo"><a href="index.html">Escribanía Otorongulus</a></div>
+				<div class="logo"><a href="../">Escribanía Otorongulus</a></div>
 			<div id="navItemContainer" class="items">
 				<ul id="items">
 					<li><a href="./nosotros.html">Nosotros</a></li>
