--- a/servicios.html
+++ b/servicios.html
@@ -24,12 +24,12 @@
 
 		<nav>	
 			<div class="container-nav">
-				<div class="logo"><a href="./">Escribanía Otorongulus</a></div>
+				<div class="logo"><a href="/">Escribanía Otorongulus</a></div>
 			<div id="navItemContainer" class="items">
 				<ul id="items">
-					<li><a href="./nosotros.html">Nosotros</a></li>
-					<li><a href="./servicios.html">Servicios</a></li>
-					<li><a href="./contacto.html">Contacto</a></li>
+					<li><a href="/nosotros.html">Nosotros</a></li>
+					<li><a href="/servicios.html">Servicios</a></li>
+					<li><a href="/contacto.html">Contacto</a></li>
 				</ul>
 				<div id="sandwitch" class="sandwitch"><i style="font-size:24px" class="fa">&#xf0c9;</i></div>
 			</div>
