--- a/contacto.html
+++ b/contacto.html
@@ -56,7 +56,7 @@
 							<label for="apellido">Apellido:</label>
 							<input type="text" id="apellido">
 							<label for="email">Correo Electrónico:</label>
-							<input type="email" id="email">
+							<input type="email" id="email" value="@">
 							<label for="mensaje">Mensaje:</label>
 							<textarea id="textarea" name="" cols="30" rows="10"></textarea>
 							<div id="aviso" class="mensaje"></div>
